# newzletter

./: .dockerignore  .gitignore  Cargo.toml  README.md
.sqlx/: query-1b4566db54cb35c5159d0ece53fdda501cae61f2dbde384791544ef87791c12f.json  query-1fa6d92f49a528aa5023860c1e96048e23063bf641d5d981c94af86a31c2efae.json  query-6db3660d1903e12ca249bbf43e9165733e43de75239e01c4a5fa258ae5ff36ab.json  query-8dd066dec81fb533459f91d932a4f79fce3def40f2e9fb57dae441cbc782ae96.json  query-e44fbeb07374889df751f0e02bba05c0cae9113cbd7d02bec01111d61d916de5.json  query-e5c54c5b9e6095fe75be627546d58cae8eb48369845d8e289c2f5c9beff3980a.json  query-fa60e5bbd25d65476372a55bdfd60ca97f19f139f2ef94f26d5bca4156397520.json
configuration/: base.yaml  production.yaml
frontend/src/pages/: about.astro  index.astro  publish_newsletter.astro
migrations/: 20260108040515_create_idempotency_table.sql  20260109225519_relax_null_checks_on_idempotency.sql  20260111091335_create_newsletter_issues_table.sql  20260111092425_create_issue_delivery_queue_table.sql  20260311052500_fix_newsletter_publishing_constraints.sql
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  utils.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  xkcd_proxy.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/subscriptions/: post.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
