[package]
name = "newzletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# this is not needed
# [[bin]]
# path = "src/main.rs"
# name = "newzletter"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.97"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
config = { version = "0.15.11", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    # we don't need uuid feature in sqlx because sqlite doesn't support uuids
    #    "uuid",
    # we don't alson need chrono for the same reasons
    # "chrono",
    "migrate",
] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tower-http = { version = "0.6.4", features = ["trace", "fs"] }
serde-aux = "4.6.0"
unicode-segmentation = "1.12.0"
validator = "0.20.0"
serde_json = "1.0.140"
secrecy = { version = "0.10.3", features = ["serde"] }
linkify = "0.10.0"
rand = "0.9.1"
base64 = "0.22.0"
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10.9"
hex = "0.4"
argon2 = { version = "0.5", features = ["std"] }
rinja_axum = "0.3.5"
axum-extra = { version = "0.10.1", features = ["query"] }
tower = "0.5.2"
tower-sessions = "0.14.0"
tower-sessions-redis-store = { version = "0.16.0", features = [
    "enable-native-tls",
] }
# not maintained
# axum-flash = "0.8.0"
axum-messages = "0.8.0"
time = "0.3.41"
serde_urlencoded = "0.7.1"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "4.0.0"
rand = "0.9.0"
claims = "0.8.0"
wiremock = "0.6.3"
